// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge borderRadius large 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_large SxBadge_color_brand css-iotaji-SxBadge-root"
    data-testid="testStyleParams-borderRadius-large"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge borderRadius max 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-z98tt1-SxBadge-root"
    data-testid="testStyleParams-borderRadius-max"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge borderRadius medium 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_medium SxBadge_color_brand css-1vs7daa-SxBadge-root"
    data-testid="testStyleParams-borderRadius-medium"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge borderRadius small 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_small SxBadge_color_brand css-54p4nd-SxBadge-root"
    data-testid="testStyleParams-borderRadius-small"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge borderRadius xLarge 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_xLarge SxBadge_color_brand css-1vwlczd-SxBadge-root"
    data-testid="testStyleParams-borderRadius-xLarge"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge borderRadius xSmall 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_xSmall SxBadge_color_brand css-1do1b5x-SxBadge-root"
    data-testid="testStyleParams-borderRadius-xSmall"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color brand 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-z98tt1-SxBadge-root"
    data-testid="testStyleParams-color-brand"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color danger 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_danger css-9fno-SxBadge-root"
    data-testid="testStyleParams-color-danger"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color info 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_info css-b5xvm5-SxBadge-root"
    data-testid="testStyleParams-color-info"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color secondary 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_secondary css-vmumr-SxBadge-root"
    data-testid="testStyleParams-color-secondary"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color success 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_success css-jvsela-SxBadge-root"
    data-testid="testStyleParams-color-success"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color text 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_text css-1rcgd2e-SxBadge-root"
    data-testid="testStyleParams-color-text"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge color warning 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_warning css-ygoahq-SxBadge-root"
    data-testid="testStyleParams-color-warning"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge default with counter 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-z98tt1-SxBadge-root"
  >
    Статус
    <span
      class="SxCounter SxCounter_type_white SxCounter_size_medium SxCounter_color_brand SxBadge-rightItem SxBadge-item css-vfkoeu-SxCounter-root-SxBadge-rightItem-SxBadge-item"
    >
      55
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge size large 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_large SxBadge_borderRadius_max SxBadge_color_brand css-1s8gh4e-SxBadge-root"
    data-testid="testStyleParams-size-large"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge size medium 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-z98tt1-SxBadge-root"
    data-testid="testStyleParams-size-medium"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge size small 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_small SxBadge_borderRadius_max SxBadge_color_brand css-1nxt58f-SxBadge-root"
    data-testid="testStyleParams-size-small"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge type contained 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_contained SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-z98tt1-SxBadge-root"
    data-testid="testStyleParams-type-contained"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge type ghosted 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_ghosted SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-fuosty-SxBadge-root"
    data-testid="testStyleParams-type-ghosted"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Badge type outlined 1`] = `
<DocumentFragment>
  <div
    class="SxBadge SxBadge_type_outlined SxBadge_size_medium SxBadge_borderRadius_max SxBadge_color_brand css-o77fnk-SxBadge-root"
    data-testid="testStyleParams-type-outlined"
  >
    Статус
  </div>
</DocumentFragment>
`;
